Separates into eyes for fire and ice dragons

--- a/src/main/resources/assets/eyeofdragons/lang/en_us.lang
+++ b/src/main/resources/assets/eyeofdragons/lang/en_us.lang
@@ -1,2 +1,3 @@
-item.eyeofdragons.dragon_eye.name=Eye of Dragon
-item.greater_eye.greater_eye.nonfound=The eye remains motionless; there must be no nearby dragons
+item.eyeofdragons.eye_of_firedragon.name=Eye of Fire Dragon
+item.eyeofdragons.eye_of_icedragon.name=Eye of Ice Dragon
+item.eyeofdragons.dragon_eye.nonfound=The eye remains motionless; there must be no nearby dragons
